# davidfastovich.github.io

./: 404.html  CNAME  Cargo.toml  Dioxus.toml  _config.yml  about.md  cv.html  cv.md  deploy.sh  index.html  index.json  index.xml  manifest.webmanifest  projects.html  robots.txt  sitemap.xml
_includes/: analytics-google.html  footer.html  header.html  nav.html
_site/: about.html  cv.html  davidfastovich.github.io.html  index.html  projects.html  tags.html
assets/: chuck-357ffde039adc7db.jpeg.br  coke-7bb49a80962fa917.jpeg.br  ecvlab-github-io-2b344624999458d4.js  ecvlab-github-io-2b344624999458d4.js.br  ecvlab-github-io-593eba5ff22d7c19.js  ecvlab-github-io-593eba5ff22d7c19.js.br  ecvlab-github-io-714fb9403cfdc33f.js  ecvlab-github-io-714fb9403cfdc33f.js.br  ecvlab-github-io-9382b75075b8967d.js  ecvlab-github-io-9382b75075b8967d.js.br  ecvlab-github-io-96e08ea06055fd6c.js  ecvlab-github-io-96e08ea06055fd6c.js.br  ecvlab-github-io-c3af54c54b15c209.js  ecvlab-github-io-c3af54c54b15c209.js.br  ecvlab-github-io-f91620c36ba1b2ff.js  ecvlab-github-io-f91620c36ba1b2ff.js.br  ecvlab-github-io_bg-34e472bb70980321.wasm  ecvlab-github-io_bg-34e472bb70980321.wasm.br  ecvlab-github-io_bg-500908f0bff5a026.wasm  ecvlab-github-io_bg-500908f0bff5a026.wasm.br  ecvlab-github-io_bg-5176e098efa51369.wasm  ecvlab-github-io_bg-5176e098efa51369.wasm.br  ecvlab-github-io_bg-7feb2f2adea948bc.wasm  ecvlab-github-io_bg-7feb2f2adea948bc.wasm.br  ecvlab-github-io_bg-b9098a26699a1a15.wasm  ecvlab-github-io_bg-b9098a26699a1a15.wasm.br  ecvlab-github-io_bg-d0bc2b1b2f20fad5.wasm  jsconfig.json  (+12 more)
(+279 files in other folders)
